add resolve function

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/quickBobbie/graphql-emitter/issues"
   },
-  "homepage": "https://github.com/quickBobbie/graphql-emitter#readme"
+  "homepage": "https://github.com/quickBobbie/graphql-emitter#readme"s
 }
